Fix mobile dorpdown view
ADMINlte bundle css defaults dropdown a tags to white.  Overroad that in
the custom css file at the 768 brake point with .kapps-menu > ul > li >
a for the kapps drop down and wrapping the i tab and span tag with a h3
in the alerts dropdown.  added a div to the broadcast alerts because the
fa-clock and time created at were overlapping the broadcast title.
remove kapp attributes and replace them with space attributes

--- a/css/custom.css
+++ b/css/custom.css
@@ -49,8 +49,13 @@ li.sidebar-include-toggle {
         left:0;
         height: 51px;
     }
-}
 
+}
+@media (max-width: 768px) {
+    .kapps-menu > ul > li > a{
+        color: #777777 !important;
+    }
+}
 .btn-primary:hover{
     background-color: #367fa9 !important;
 }
